[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page analyzer for SEO suitability"
authors = ["Anastasia Izmaylova <abulatova1992@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
